--- a/README
+++ b/README
@@ -1,1 +1,8 @@
-need to fix the remove Fragment functions , add isotope in again .
+Note-to-sefl web apps <br/>
+Describtion: 
+
+
+
+
+
+Demo link : https://dustttech.github.io/Notes/
